# PixelTwinWebCloner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: pyproject.toml  requirements.txt
backend/app/: event_loop_policy.py  llm.py  main.py  scraper.py
frontend/: demo_video_script.txt  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/clone/stream/: route.ts
frontend/components/: CloneForm.tsx  CloneResult.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/components/ui/: progress.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DiffSlider.tsx  IframePreview.tsx  Toast.tsx  UrlForm.tsx
