[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
   "httpx>=0.27",


  "beautifulsoup4>=4.12",
"requests>=2.30",                 # required for `_fetch_static_html`
  "lxml>=4.9",

  "playwright>=1.44",              # headless browser
  "python-dotenv>=1.0",

  # LLM SDKs
  "openai",
  "anthropic>=0.52",
  "google-genai"   
]

[tool.poetry.plugins."poetry.post_install"]
# The key "playwright_install" is arbitrary; the value is the command to run.
playwright_install = "playwright install"
